# weather-statistics

./: .gitignore  CMakeLists.txt  README.md  WeatherStatistics.cpp  WeatherStatistics.h  main.cpp
tests/: WeatherStatistics.test.cpp  WeatherStatisticsMockData.txt
